# FastDivider

./: .gitignore  AGENTS.md  FastDivider.spec  README.md  build.py  build_debug.py  pyproject.toml  release.py  requirements.txt  version_info.txt
.serena/: project.yml
docs/superpowers/specs/: 2026-06-17-toast-layout-and-save-notice-design.md
src/: __init__.py  app.py  main.py  version.py
src/core/: __init__.py  clipboard_reader.py  config.py  history.py  hotkey_manager.py  number_parser.py  uia_reader.py  updater.py
src/ui/: __init__.py  history_dialog.py  settings_dialog.py  toast_window.py  tray_icon.py  update_dialog.py
